Android Apk build step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@
 #
 version: 2
 jobs:
-  build:
+  node:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:8
       #- image: circleci/node:8.11.3
       
       # Specify service dependencies here if necessary
@@ -37,5 +37,33 @@ jobs:
       # run tests!
       #- run: yarn test
 
+  android:
+    docker:
+      # specify the version you desire here
+      - image: circleci/android:api-27-node8-alpha
+      #- image: circleci/node:8.11.3
+      
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mongo:3.4.4
 
+    working_directory: ~/repo
 
+    steps:
+      - checkout:
+          path: ~/repo
+
+      - attach_workspace:
+          at: ~/repo
+
+      - run: exp build:android
+
+workflows:
+  version: 2
+  node-android-ios:
+    jobs:
+      - node
+      - android:
+          requires:
+            - node
